# BMSTU

./: .gitignore  README.md
Algorithms and Data Structures/: binary_search.c  bitwise_string_diff.c  boyer-moore_substring_in_string_entrances.c  concatenate_strings.c  extended_heuristics_of_stop_symbol.c  fibonacci_strings.c  frame_drawer.c  knutt-morris-pratt_substring_in_string_entrances.c  max_elem_in_array.c  max_elem_of_subsequence.c  max_prime_divisor_sieve-of-eratosthenes.c  max_summ_of_sequential_elements.c  peak_in_sequence.c  periodical_string_prefixes.c  polynomial_equation.c  random_ICS-4_home_task.c  revert_array.c  saddlepoint_of_array.c  set_intersection.c  string_chars_sorting.c  struct_cyclic_buffer.c  struct_prior_queue.c  struct_queue.c  struct_stackmachine.c  summ_of_powers_of_2.c  swap_array_elements.c  word_made_of_other_word_perfixes.c  wordcount.c  zeckendorf_theorem.c
Computer Architecture/: arch_integrate.c  arch_integrate_kahan_summation.c
Computer Graphics/: lab1_opengl_intro.cpp  lab23_projections.cpp  lab4_rasterization.cpp  lab5_mid_point_clipping.cpp  lab6_lighting_animation.cpp  lab7_optimizations.cpp
Coursework Compilers/: README.txt
Databases/: README.md  lab10_transactions.sql  lab14_vertical_distribution.sql  (+8 more)
Object-Oriented Programming/mod2019/: CMakeLists.txt  README.md  main.cpp  test.cpp  textstats.cpp  textstats.hpp
Object-Oriented Programming/mod2019/excel/: excel.cpp
Object-Oriented Programming/mod2019/spellcheck/: spellcheck.cpp
Object-Oriented Programming/mod2019/text_analysis/: 10.txt  test.cpp  textstats.cpp
(+349 files in other folders)
